cambios en front 3

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,13 +102,7 @@
             </svg></a>
     </article>
     <article class="project-detail">
-        <header class="project-header">
-            <div class="project-intro">
-                <h1>Nombre del proyecto</h1>
-                <p>Resúmen del proyecto</p>
-            </div>
-        </header>
-        <div class="task-container">
+        <div id="datos-incompletos-container"></div>
 
         </div>
     </article>
