--- a/frontend/minuta.html
+++ b/frontend/minuta.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/alphardex/aqua.css/dist/aqua.min.css'>
   <link rel="stylesheet" href="/static/style.css">
-  <script src="/static/notion-functionality.js" defer></script>
+  <script src="/static/incompletos.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.3/popup.min.js"></script>
   <a href="https://www.flaticon.com/free-icons/edit" title="edit icons">Edit icons created by alkhalifi design - Flaticon</a>
 </head>
