--- a/frontend/minuta.html
+++ b/frontend/minuta.html
@@ -105,7 +105,7 @@
         <h1>Mensajes desde FastAPI:</h1>
     <ul>
         {% for message in messages %}
-            <li>{{ message }}</li>
+            <li>{{ names }}</li>
         {% endfor %}
     </ul>
     </article>
