--- a/frontend/minuta.html
+++ b/frontend/minuta.html
@@ -104,8 +104,8 @@
     <article class="project-detail">
         <h1>Mensajes desde FastAPI:</h1>
     <ul>
-        {% for message in messages %}
-            <li>{{ names }}</li>
+        {% for name in names %}
+            <li>{{ name }}</li>
         {% endfor %}
     </ul>
     </article>
