--- a/frontend/minuta.html
+++ b/frontend/minuta.html
@@ -108,9 +108,10 @@
             {% for name, dat in combined %}
                 <label>
                     {{ name }}
-                    <input type="text" name="{{ name }}" value="{{ dat }}">
+                    <input type="text" name="{{ name }}" value="{{ dat }}" >
                 </label><br>
             {% endfor %}
+            <input type="submit" value="Aceptar">
         </form>
         
     
