--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,9 +72,9 @@
     <article class="projects">
         <header class="welcome-banner">
             <h1>Hola de nuevo</h1>
-            <a href="/obtenerProyectosIncompletos/">Comandos de proyectos incompletos</a>
-            <a href="/obtenerTareasIncompletos/">Comandos de tareas incompletos</a>
-
+            <a href="/obtenerProyectosIncompletos/">Comandos de proyectos incompletos</a><br>
+            <a href="/obtenerTareasIncompletos/">Comandos de tareas incompletos</a><br>
+            <p>Puedes ver los proyectos creados junto a sus Sprints.</p>
         </header>
         <section class="section" id="projects">
             <div class="section-title">
@@ -104,6 +104,15 @@
             </svg></a>
     </article>
     <article class="project-detail">
+        <header class="project-header">
+            <div class="project-intro">
+                <h1>Nombre del proyecto</h1>
+                <p>Resúmen del proyecto</p>
+            </div>
+        </header>
+        <div class="task-container">
+
+        </div>
     </article>
 </main>
 <!-- partial -->
