--- a/frontend/minuta2.html
+++ b/frontend/minuta2.html
@@ -104,7 +104,7 @@
     <article class="project-detail">
         <h1>Mensajes desde FastAPI:</h1>
         {% for combined in combineds %}
-        <form action="/acompletar/" method="POST">
+        <form action="/acompletar{{tipo}}/" method="POST">
             {% for name, dat in combined %}
                 <label>
                     {{ name }}
