--- a/frontend/minuta.html
+++ b/frontend/minuta.html
@@ -113,7 +113,7 @@
             {% endfor %}
             <label>
                 Sprint
-                <input type="text" name="sprint">
+                <input type="text" name="nombre_sprint">
             </label><br>
             <input type="submit" value="Aceptar">
         </form>
