--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,8 +123,8 @@
             // Usa los datos de 'Datos_incompletos'
             create_project_list(Datos_incompletos);
             show_project_blocks();
-            //set_active(document.getElementById(active_project_id));
-            //show_project_tasks(active_project_id);
+            set_active(document.getElementById(active_project_id));
+            show_project_tasks(active_project_id);
         });
     </script>
 </body>
