--- a/frontend/minuta2.html
+++ b/frontend/minuta2.html
@@ -107,13 +107,13 @@
     </article>
     <article class="project-detail">
         <h1>Mensajes desde FastAPI:</h1>
-        {% for combined in combineds %}
+        {% for task in tasks %}
         
-        <form action="/acompletar{{tipo}}/" method="POST" name="">
-            {% for name, dat in combined %}
+        <form action="/acompletar{{tipo}}/" method="POST">
+            {% for i in task %}
                 <label>
-                    {{ name }}
-                    <input type="text" name="{{ name }}" value="{{ dat }}">
+                    {{ name[i] }}
+                    <input type="text" name="{{ name[i] }}" value="{{ dat[i] }}">
                 </label><br>
             {% endfor %}
             <input type="submit" value="Aceptar">
