--- a/frontend/proyectos.html
+++ b/frontend/proyectos.html
@@ -13,8 +13,22 @@
     const Datos_incompletos = {{ todo | safe }};
     console.log("Datos cargados:", Datos_incompletos);
 </script>
-</head>
-  <a href="https://www.flaticon.com/free-icons/edit" title="edit icons">Edit icons created by alkhalifi design - Flaticon</a>
+
+<div
+class="sqs-block-button-container sqs-block-button-container--center"
+data-animation-role="button"
+data-alignment="center"
+data-button-size="medium"
+data-button-type="primary"
+>
+<a
+  href="index.html"
+  class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element"
+  
+>
+  Regresar
+</a>
+</div>
 </head>
 <body>
 
