--- a/frontend/proyectos.html
+++ b/frontend/proyectos.html
@@ -22,7 +22,7 @@ data-button-size="medium"
 data-button-type="primary"
 >
 <a
-  href="index.html"
+  href="/"
   class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element"
   
 >
