--- a/frontend/minuta2.html
+++ b/frontend/minuta2.html
@@ -16,7 +16,7 @@
   data-button-type="primary"
   >
   <a
-    href="index.html"
+    href="/"
     class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element"
     
   >
