--- a/frontend/proyectos.html
+++ b/frontend/proyectos.html
@@ -6,10 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/alphardex/aqua.css/dist/aqua.min.css'>
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <script src="/static/notion-functionality.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.3/popup.min.js"></script>
   <script>
     // Inyectar la variable 'todo' desde Python a JS
+    {% if a is not none and a == true %}
+        alert("Petición concretada");
+    {% elif a is not none and a == false  %}
+        alert("Ocurrió un error, la petición no se concretó");
+    {% else %}
+        console.log("cuak");
+    {% endif %}
     const Datos_incompletos = {{ todo | safe }};
     console.log("Datos cargados:", Datos_incompletos);
 </script>
@@ -73,35 +82,19 @@
 <main class="dashboard">
     <article class="projects">
         <header class="welcome-banner">
-            <h1>Hola de nuevo</h1>
-            <p>Puedes ver los proyectos creados junto a sus Sprints. </p>
+            <h1>Bienvenido a MinuteMate</h1>
+            <p>Puedes ver los proyectos creados en Notion, si seleccionas alguno se desplegarán las tareas relacionadas del lado derecho. </p>
         </header>
         <section class="section" id="projects">
             <div class="section-title">
-                <span class="title">Projects</span>
+                <span class="title">Projectos</span>
                 <span class="project-count">(13)</span>
             </div>
             <ul class="project-list">
                 
             </ul>
         </section>
-        <a href="/" class="menu"><svg t="1586009334810" class="icon" viewBox="0 0 1024 1024" version="1.1"
-                xmlns="http://www.w3.org/2000/svg" p-id="3816" width="18" height="18">
-                <path d="M199.68 300.032m-49.152 0a4.8 4.8 0 1 0 98.304 0 4.8 4.8 0 1 0-98.304 0Z" p-id="3817">
-                </path>
-                <path
-                    d="M402.432 343.04 829.44 343.04c23.552 0 44.032-19.456 44.032-44.032S852.992 256 829.44 256L402.432 256c-23.552 0-44.032 19.456-44.032 44.032S377.856 343.04 402.432 343.04z"
-                    p-id="3818"></path>
-                <path d="M199.68 512m-49.152 0a4.8 4.8 0 1 0 98.304 0 4.8 4.8 0 1 0-98.304 0Z" p-id="3819"></path>
-                <path
-                    d="M829.44 468.992 402.432 468.992c-23.552 0-44.032 19.456-44.032 44.032s19.456 44.032 44.032 44.032L829.44 557.056c23.552 0 44.032-19.456 44.032-44.032S852.992 468.992 829.44 468.992z"
-                    p-id="3820"></path>
-                <path d="M199.68 724.992m-49.152 0a4.8 4.8 0 1 0 98.304 0 4.8 4.8 0 1 0-98.304 0Z" p-id="3821">
-                </path>
-                <path
-                    d="M829.44 680.96 402.432 680.96c-23.552 0-44.032 19.456-44.032 44.032s19.456 44.032 44.032 44.032L829.44 769.024c23.552 0 44.032-19.456 44.032-44.032S852.992 680.96 829.44 680.96z"
-                    p-id="3822"></path>
-            </svg></a>
+        <a href="/" class="menu"><i class="fa fa-home"></i></a>
     </article>
     <article class="project-detail">
         <header class="project-header">
