cambios al recibir tareas

--- a/frontend/proyectos.html
+++ b/frontend/proyectos.html
@@ -84,6 +84,7 @@
         <header class="welcome-banner">
             <h1>Bienvenido a MinuteMate</h1>
             <p>Puedes ver los proyectos creados en Notion, si seleccionas alguno se desplegarán las tareas relacionadas del lado derecho. </p>
+            <button onclick="create_project()">Crear Proyecto</button>
         </header>
         <section class="section" id="projects">
             <div class="section-title">
