cambios en sprints

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,11 @@
 	<div class="bg-logo card">
 		<div class="gradient card">
 			<h1>MINUTE - MATE </h1>
-			<button type="button"> <a href="/obtenerTareasIncompletos/">Obtener tareas incompletas </a></button>
-			<button type="button"> <a href="/obtenerProyectosIncompletos/">Obtener proyectos incompletos </a></button>
-			<button type="button"> <a href="/obtenerSprintsIncompletos/"> Obtener sprints incompletos </a></button>
-			<button type="button"> <a href="/sprints/">  Consultar por sprint </a> </button>
-			<button type="button"> <a href="/proyectos/"> Consultar por proyectos </a> </button>
+			<button type="button" onclick="location.href='/obtenerTareasIncompletos/'">Obtener tareas incompletas</button>
+			<button type="button" onclick="location.href='/obtenerProyectosIncompletos/'">Obtener proyectos incompletos</button>
+			<button type="button" onclick="location.href='/obtenerSprintsIncompletos/'">Obtener sprints incompletos</button>
+			<button type="button" onclick="location.href='/sprints/'">Consultar por sprint</button>
+			<button type="button" onclick="location.href='/proyectos/'">Consultar por proyectos</button>
 		</div>
 	</div>
 </body>
