--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
 			<button type="button" onclick="location.href='/obtenerSprintsIncompletos/'">Obtener sprints incompletos</button>
 			<button type="button" onclick="location.href='/sprints/'">Consultar por sprint</button>
 			<button type="button" onclick="location.href='/proyectos/'">Consultar por proyectos</button>
+			<button type="button" onclick="location.href='/obtenerResumenMinutas/'">Resumen de las minutas</button>
 		</div>
 	</div>
 </body>
