--- a/frontend/resumen_minuta.html
+++ b/frontend/resumen_minuta.html
@@ -1,10 +1,42 @@
-<article class="projects">
-    <header class="welcome-banner">
-        <h1>Minutas Recientes</h1>
-        {% for res in res_min %}
-            {% for r in res %}
-                <p>{{res[r]}}</p>
+
+
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Task Management</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/alphardex/aqua.css/dist/aqua.min.css'>
+  <link rel="stylesheet" href="/static/style4.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <script src="/static/notion-functionality.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.3/popup.min.js"></script>
+  <script>
+
+</script>
+
+
+</head>
+<body>
+  <!-- END OF TEMPLATE ZONE -->
+
+<!-- partial:index.partial.html -->
+<main class="dashboard">
+    <article class="projects">
+        <header class="welcome-banner">
+            <h1>Minutas Recientes</h1>
+            {% for res in res_min %}
+                <h2>Minuta: </h2>
+                {% for r in res %}
+                    <p>{{res[r]}}</p>
+                {% endfor %}
             {% endfor %}
-        {% endfor %}
-    </header>
-</article>
+        </header>
+    </article>
+</main>
+
+</body>
+
+
+</html>
