--- a/frontend/sprint.html
+++ b/frontend/sprint.html
@@ -84,7 +84,8 @@
     <article class="projects">
         <header class="welcome-banner">
             <h1>Bienvenido a MinuteMate</h1>
-            <p>Puedes ver los proyectos creados en Notion, si seleccionas alguno se desplegarán las tareas relacionadas del lado derecho. </p>
+            <p>Puedes ver los proyectos creados en Notion</p>
+            <p>Si seleccionas alguno se desplegarán las tareasdel lado derecho. </p>
             <button onclick="create_project()">Crear Sprint</button>
         </header>
         <section class="section" id="projects">
